--- a/help_desk_django_project/helpdesk/templates/atendente/atendente_login.html
+++ b/help_desk_django_project/helpdesk/templates/atendente/atendente_login.html
@@ -2,21 +2,50 @@
 {% load bootstrap3 %}
 
 {% block title %}
-Área do Atendente
+    <div class="row">
+        <div class="col-12">
+            Área do Atendente
+         </div>
+    </div>
 {% endblock title %}
 
 {% block content %}
+    <div class="row">
+        <div class="col-12">
 
-{% if form.errors %}
-<p>Usuário ou senha incorreto. Por favor, tente novamente.</p>
+
+
+        {% if form.errors %}
+        <p>Usuário ou senha incorreto. Por favor, tente novamente.</p>
+        {% endif %}
+
+        <form method="post" action="" >
+            {% csrf_token %}
+            <div class="input-group mb-3">
+                <div class="input-group-append">
+                    <span class="input-group-text"><i class="fas fa-user"></i></span>
+                </div>
+
+                <input type="text" name="username" placeholder="Username" class="form-control">
+            </div>
+            <div class="input-group mb-3">
+                <div class="input-group-append">
+                    <span class="input-group-text"><i class="fas fa-user"></i></span>
+                </div>
+
+                <input type="password" name="password" placeholder="Password" class="form-control">
+            </div>
+              <p>Não tem uma conta?<a href="{% url 'cliente_create' %}"> Crie uma</a></p>
+              <button type="submit" class="btn btn-success">Login</button>
+        </form>
+    </div>
+</div>
+
+{% if messages %}
+            <div class="alert alert-danger" role="alert">
+                {% for message in messages %}
+                    <div {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</div>
+                {% endfor %}
+            </div>
 {% endif %}
-
-<form method="post" >
-    {% csrf_token %}
-  {% bootstrap_form form  %}
-
-  <p>Não tem uma conta?<a href="{% url 'cliente_create' %}"> Crie uma</a></p>
-  <button type="submit" class="btn btn-success">Login</button>
-</form>
-
 {% endblock content %}
