--- a/help_desk_django_project/helpdesk/templates/base.html
+++ b/help_desk_django_project/helpdesk/templates/base.html
@@ -26,12 +26,20 @@
                   </li>
                 </ul>
               </div>
+                <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i></a>
+                        </li>
+
+                    </ul>
+                </div>
         </nav>
         </div>
 
     </div>
     <div class="container">
-        <div class="row">
+        <div class="row mb-3">
             <div clas="col-12">
                  <h1>
                     {% block title %}
