--- a/help_desk_django_project/helpdesk/templates/cliente/cliente_form.html
+++ b/help_desk_django_project/helpdesk/templates/cliente/cliente_form.html
@@ -7,12 +7,66 @@ Cadastro de clientes
 
 {% block content %}
 
-<form method="post">
+<form method="post" action="">
     {% csrf_token %}
-    {% bootstrap_form form  %}
+    <div class="input-group mb-3">
+        <div class="input-group-append">
+             <span class="input-group-text"><i class="fas fa-user"></i></span>
+        </div>
+        {{form.username}}
+    </div>
+    <div class="input-group mb-3">
+        <div class="input-group-append">
+             <span class="input-group-text"><i class="fas fa-user"></i></span>
+        </div>
+        {{form.username}}
+    </div>
+    <!--
+    <div class="input-group mb-3">
+        <div class="input-group-append">
+             <span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
+        </div>
+        {{form.email}}
+    </div>
+    -->
+    <div class="input-group mb-3">
+        <div class="input-group-append">
+             <span class="input-group-text"><i class="fas fa-key"></i></span>
+        </div>
+        {{form.password1}}
+    </div>
+
+    <div class="input-group mb-3">
+        <div class="input-group-append">
+             <span class="input-group-text"><i class="fas fa-key"></i></span>
+        </div>
+        {{form.password2}}
+    </div>
     <button type="submit" class="btn btn-primary">
         Salvar
     </button>
 </form>
 
+{{form.errors}}
+
+<div class="mt-4">
+    <div class="d-flex justify-content-center links">
+        Já tem uma conta? <a href="{% url 'cliente_login' %}" class="ml-2">Login</a>
+    </div>
+</div>
+
+<script>
+    var form_fields = document.getElementsByTagName('input')
+    form_fields[1].placeholder='Username';
+    form_fields[2].placeholder='Email';
+    form_fields[3].placeholder='Enter Password';
+    form_fields[4].placeholder='Re-enter Password';
+
+    for ( var field in form_fields){
+        form_fields[field].className += 'form-control'
+     }
+
+
+</script>
 {% endblock content %}
+
