--- a/help_desk_django_project/helpdesk/templates/cliente/cliente_login.html
+++ b/help_desk_django_project/helpdesk/templates/cliente/cliente_login.html
@@ -12,17 +12,40 @@
 {% block content %}
     <div class="row">
         <div class="col-12">
+
+
+
         {% if form.errors %}
         <p>Usuário ou senha incorreto. Por favor, tente novamente.</p>
         {% endif %}
 
-        <form method="post" >
+        <form method="post" action="" >
             {% csrf_token %}
-          {% bootstrap_form form  %}
+            <div class="input-group mb-3">
+                <div class="input-group-append">
+                    <span class="input-group-text"><i class="fas fa-user"></i></span>
+                </div>
 
-          <p>Não tem uma conta?<a href="{% url 'cliente_create' %}"> Crie uma</a></p>
-          <button type="submit" class="btn btn-success">Login</button>
+                <input type="text" name="username" placeholder="Username" class="form-control">
+            </div>
+            <div class="input-group mb-3">
+                <div class="input-group-append">
+                    <span class="input-group-text"><i class="fas fa-user"></i></span>
+                </div>
+
+                <input type="password" name="password" placeholder="Password" class="form-control">
+            </div>
+              <p>Não tem uma conta?<a href="{% url 'cliente_create' %}"> Crie uma</a></p>
+              <button type="submit" class="btn btn-success">Login</button>
         </form>
     </div>
 </div>
+
+{% if messages %}
+            <div class="alert alert-danger" role="alert">
+                {% for message in messages %}
+                    <div {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</div>
+                {% endfor %}
+            </div>
+{% endif %}
 {% endblock content %}
