--- a/help_desk_django_project/helpdesk/templates/atendente/atendente_login.html
+++ b/help_desk_django_project/helpdesk/templates/atendente/atendente_login.html
@@ -1,19 +1,17 @@
 {% extends '../base.html' %}
 {% load bootstrap3 %}
 
-{% block title %}
-    <div class="row">
-        <div class="col-12">
-            Área do Atendente
-         </div>
-    </div>
-{% endblock title %}
+
+
 
 {% block content %}
-    <div class="row">
-        <div class="col-12">
-
-
+<div class="row">
+    <div class="col-12">
+       <h1>Área do Atendente</h1>
+     </div>
+</div>
+<div class="row">
+    <div class="col-12">
 
         {% if form.errors %}
         <p>Usuário ou senha incorreto. Por favor, tente novamente.</p>
