--- a/help_desk_django_project/helpdesk/templates/base.html
+++ b/help_desk_django_project/helpdesk/templates/base.html
@@ -29,7 +29,7 @@
                 <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i></a>
+                            <a class="nav-link" href="{% url 'user_logout' %}"><i class="fas fa-sign-out-alt"></i></a>
                         </li>
 
                     </ul>
@@ -39,20 +39,9 @@
 
     </div>
     <div class="container">
-        <div class="row mb-3">
-            <div clas="col-12">
-                 <h1>
-                    {% block title %}
-                    {% endblock %}
-                </h1>
-            </div>
-
-        </div>
-        <div class="row">
-            <div class="col-12">
-                {% block content %}
-                {% endblock %}
-            </div>
+        <div class="col-12">
+            {% block content %}
+            {% endblock %}
         </div>
     </div>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
