--- a/help_desk_django_project/helpdesk/templates/atendente/atendente_list.html
+++ b/help_desk_django_project/helpdesk/templates/atendente/atendente_list.html
@@ -37,7 +37,7 @@ Lista de clientes
     {% endfor %}
     </tbody>
 </table>
-<a href="{% url 'cliente_create' %}">
+<a href="{% url 'atendente_create' %}">
     <button type="submit" class="btn btn-primary">
         Cadastrar
     </button>
