--- a/help_desk_django_project/helpdesk/templates/atendente/atendente_login.html
+++ b/help_desk_django_project/helpdesk/templates/atendente/atendente_login.html
@@ -1,9 +1,6 @@
 {% extends '../base.html' %}
 {% load bootstrap3 %}
 
-
-
-
 {% block content %}
 <div class="row">
     <div class="col-12">
@@ -33,7 +30,7 @@
 
                 <input type="password" name="password" placeholder="Password" class="form-control">
             </div>
-              <p>Não tem uma conta?<a href="{% url 'cliente_create' %}"> Crie uma</a></p>
+              <p>Não tem uma conta?<a href="{% url 'atendente_create' %}"> Crie uma</a></p>
               <button type="submit" class="btn btn-success">Login</button>
         </form>
     </div>
