Resolvi a linkagem do cliente com o usuário padrão do django. Também ajustei as mensagens de sucesso e erro.

--- a/help_desk_django_project/helpdesk/templates/atendente/atendente_home.html
+++ b/help_desk_django_project/helpdesk/templates/atendente/atendente_home.html
@@ -40,7 +40,7 @@ HOME - Meus chamados
             {% endfor %}
             </tbody>
         </table>
-        <a href="{% url 'chamado_create' %}">
+        <a href="{% url 'chamado_create' pk=user.id %}">
             <button type="submit" class="btn btn-primary">
                 Cadastrar novo chamado
             </button>
