--- a/help_desk_django_project/helpdesk/templates/cliente/cliente_home.html
+++ b/help_desk_django_project/helpdesk/templates/cliente/cliente_home.html
@@ -36,7 +36,7 @@
             {% endfor %}
             </tbody>
         </table>
-        <a href="{% url 'chamado_create' %}">
+        <a href="{% url 'chamado_create' pk=user.id %}">
             <button type="submit" class="btn btn-primary">
                 Cadastrar novo chamado
             </button>
