--- a/help_desk_django_project/helpdesk/templates/atendente/atendente_login.html
+++ b/help_desk_django_project/helpdesk/templates/atendente/atendente_login.html
@@ -37,10 +37,14 @@
 </div>
 
 {% if messages %}
-            <div class="alert alert-danger" role="alert">
-                {% for message in messages %}
-                    <div {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</div>
-                {% endfor %}
-            </div>
+<div class="row mt-3">
+    <div class="col-3">
+    {% for message in messages %}
+        <div class="alert {% if message.tags %}alert-{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}danger{% else %}{{ message.tags }}{% endif %}{% endif %}" role="alert">
+            {{ message }}
+         </div>
+    {% endfor %}
+    </div>
+</div>
 {% endif %}
 {% endblock content %}
