--- a/help_desk_django_project/helpdesk/templates/base.html
+++ b/help_desk_django_project/helpdesk/templates/base.html
@@ -19,17 +19,18 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'cliente_login' %}">Área do Cliente <span class="sr-only">(current)</span></a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="{% url 'atendente_login' %}">Área do Atendente</a>
+
                   </li>
                 </ul>
               </div>
                 <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'user_logout' %}"><i class="fas fa-sign-out-alt"></i></a>
+                        <li class="nav-item text-white">
+                            {% if request.user.is_authenticated %}
+                                <a class="nav-link" href="{% url 'user_logout' %}"><i class="fas fa-sign-out-alt"></i></a>
+                            {% else %}
+                                <a class="nav-link text-white" href="{% url 'cliente_login' %}">Entrar na área do cliente<span class="sr-only">(current)</span></a>
+                            {% endif %}
                         </li>
 
                     </ul>
