--- a/help_desk_django_project/helpdesk/templates/home/home.html
+++ b/help_desk_django_project/helpdesk/templates/home/home.html
@@ -8,6 +8,9 @@
     </div>
     <div class="col-6">
          <div id="home_text">Suporte 24/7</div>
+         {% if request.user.is_authenticated %}
+            <a class="nav-link" href="{% url 'cliente_home' %}">Ver meus chamados</a>
+         {% endif %}
     </div>
 
 </div>
