--- a/help_desk_django_project/helpdesk/templates/chamado/chamado_list.html
+++ b/help_desk_django_project/helpdesk/templates/chamado/chamado_list.html
@@ -35,7 +35,7 @@ Lista de clientes
     {% endfor %}
     </tbody>
 </table>
-<a href="{% url 'chamado_create' %}">
+<a href="{% url 'chamado_create' request.user.id %}">
     <button type="submit" class="btn btn-primary">
         Abrir novo chamado
     </button>
