--- a/help_desk_django_project/helpdesk/templates/cliente/cliente_home.html
+++ b/help_desk_django_project/helpdesk/templates/cliente/cliente_home.html
@@ -15,7 +15,7 @@
                 </a>
             </li>
             <li class="list-group-item text-center" class="text-decoration-none">
-                <a href="{% url 'chamado_create' %}">
+                <a href="{% url 'chamado_create' request.user.id %}">
                         Cadastrar novo chamado
                 </a>
             </li>
