--- a/help_desk_django_project/helpdesk/templates/chamado/chamado_form.html
+++ b/help_desk_django_project/helpdesk/templates/chamado/chamado_form.html
@@ -12,17 +12,22 @@
 
         <form method="post" action="">
             {% csrf_token %}
-
+            <!--
             {% for field in form %}
+            -->
                 <div class="input-group mb-3">
                     <div class="input-group-append">
                         <span class="input-group-text"><i class="fas fa-ticket-alt"></i></span>
+                        {{ form.descricao }}
+                        <!--
                          {{ field.descricao|add_class:'form-control'|attr:"rows:20"|attr:"cols:20" }}
+                         -->
                      </div>
 
                 </div>
+            <!--
             {% endfor %}
-
+            -->
 
             <button type="submit" class="btn btn-primary">
                 Salvar
