--- a/help_desk_django_project/helpdesk/templates/cliente/cliente_home.html
+++ b/help_desk_django_project/helpdesk/templates/cliente/cliente_home.html
@@ -10,7 +10,7 @@
     <div class="col-12">
         <ul class="list-group">
             <li class="list-group-item text-center">
-                <a href="{% url 'chamado_list' request.user.id  %}" class="text-decoration-none">
+                <a href="{% url 'chamado_list' %}" class="text-decoration-none">
                         Ver meus chamados
                 </a>
             </li>
