--- a/help_desk_django_project/helpdesk/templates/chamado/chamado_form.html
+++ b/help_desk_django_project/helpdesk/templates/chamado/chamado_form.html
@@ -16,7 +16,7 @@
             {% for field in form %}
             -->
                 <div class="input-group mb-3">
-                    <div class="input-group-append">
+                    <div class="input-group-append col-12">
                         <span class="input-group-text"><i class="fas fa-ticket-alt"></i></span>
                         {{ form.descricao }}
                         <!--
