--- a/help_desk_django_project/helpdesk/templates/chamado/chamado_list.html
+++ b/help_desk_django_project/helpdesk/templates/chamado/chamado_list.html
@@ -1,47 +1,62 @@
 {% extends '../base.html' %}
 
-{% block title %}
-Lista de clientes
-{% endblock title %}
-
 {% block content %}
-
-<table class="table">
-    <thead>
-        <tr>
-            <th>Nº do chamado</th>
-            <th>Data da abertura</th>
-            <th>Descrição</th>
-            <th>Status atual</th>
-            <th>Atendente</th>
-            <th>Data de fechamento</th>
-            <th>Detalhes</th>
-        </tr>
-    </thead>
-    <tbody>
-    {% for c in chamado %}
-        <tr>
-            <td>{{ c.id }}</td>
-            <td>{{ c.data_abertura }}</td>
-            <td>{{ c.descricao }}</td>
-            <td>{{ c.status }}</td>
-            <td>{{ c.atendente }}</td>
-            <td>{{ c.data_fechamento }}</td>
-            <td>
-                <a href="{% url 'chamado_interacao_list' chamado=c.id %}">
-                    <i class="fas fa-info"></i>
-                </a>
-            </td>
-        </tr>
-    {% endfor %}
-    </tbody>
-</table>
-<a href="{% url 'chamado_create' request.user.id %}">
-    <button type="submit" class="btn btn-primary">
-        Abrir novo chamado
-    </button>
-</a>
-
+<div class="row mb-3">
+    <div class="col-12">
+       <h1>Novo Chamado</h1>
+     </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Nº do chamado</th>
+                    <th>Data da abertura</th>
+                    <th>Descrição</th>
+                    <th>Status atual</th>
+                    <th>Atendente</th>
+                    <th>Data de fechamento</th>
+                    <th>Detalhes</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for c in chamado %}
+                <tr>
+                    <td>{{ c.id }}</td>
+                    <td>{{ c.data_abertura }}</td>
+                    <td>{{ c.descricao }}</td>
+                    <td>{{ c.get_status_display }}</td>
+                    <td>
+                        {% if not c.atendente %}
+                        Não atendido
+                        {% else %}
+                        {{ c.atendente }}
+                        {% endif %}
+                    </td>
+                    <td>
+                        {% if not c.data_fechamento %}
+                        Ainda em aberto
+                        {% else %}
+                        {{ c.data_fechamento }}
+                        {% endif %}
+                    </td>
+                    <td>
+                        <a href="{% url 'chamado_interacao_list' chamado=c.id %}">
+                            <i class="fas fa-info"></i>
+                        </a>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    <a href="{% url 'chamado_create' request.user.id %}">
+        <button type="submit" class="btn btn-primary">
+            Abrir novo chamado
+        </button>
+    </a>
+</div>
 {% if messages %}
 <div class="row mt-3">
     <div class="col-3">
