--- a/help_desk_django_project/helpdesk/templates/chamado_interacao/chamado_interacao_list.html
+++ b/help_desk_django_project/helpdesk/templates/chamado_interacao/chamado_interacao_list.html
@@ -1,10 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends '../base.html' %}
 
-</body>
-</html>
+{% block content %}
+<div class="row">
+    <div class="col-12">
+       <h1>
+           Interações do Chamado nº
+           <a href="{% url 'chamado_list' %}">{{ chamado }}</a>
+       </h1>
+     </div>
+</div>
+<div class="row mt-4">
+    <div class="col-12">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Data da Interação</th>
+                    <th>Interação</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for i in interacao %}
+                <tr>
+                    <td>{{ i.data_interacao }}</td>
+                    <td>{{ i.interacao }}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+        <a href="{% url 'chamado_interacao_create' id_chamado=chamado %}">
+            <button type="submit" class="btn btn-primary">
+                Adicionar Interação
+            </button>
+        </a>
+    </div>
+</div>
+
+{% if messages %}
+<div class="row mt-3">
+    <div class="col-3">
+    {% for message in messages %}
+        <div class="alert {% if message.tags %}alert-{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}danger{% else %}{{ message.tags }}{% endif %}{% endif %}" role="alert">
+            {{ message }}
+         </div>
+    {% endfor %}
+    </div>
+</div>
+{% endif %}
+
+{% endblock content %}
