--- a/help_desk_django_project/helpdesk/templates/chamado_interacao/chamado_interacao_list.html
+++ b/help_desk_django_project/helpdesk/templates/chamado_interacao/chamado_interacao_list.html
@@ -5,7 +5,7 @@
     <div class="col-12">
        <h1>
            Interações do Chamado nº
-           <a href="{% url 'chamado_list' %}">{{ chamado }}</a>
+           <a href="{% url 'chamado_list' filter='cliente_logged' %}">{{ chamado }}</a>
        </h1>
      </div>
 </div>
